gcc/testsuite/rust/compile/feature_extern_types.rs
extern "C" {
    type F; //{ dg-error "extern types are experimental." "" { target *-*-* }  }
}


fn main() {

}
